# HyPlAs

./: .gitignore  LICENSE  Makefile  README.md  build.py  environment.yml  installer.py  module_load.sh  module_unload.sh  plas.snake  pyproject.toml  requirements.txt
data/: analysis.ipynb  realdata_run.smk  simulation_analysis.smk  simulation_generate.smk  study.samples.tsv
scripts/: collect_gfa.py  filter_plasmid_sam.py  module_load.sh  module_unload.sh  plas.snake
src/: hyplas.py  hyplass.py  innotin.cpp  kseq.h  magpie.py  main.py  mock.fq  recover_sr.py  select_missing_reads.cpp  split_plasmid_reads.cpp  unnamed_plasmid_assembler.py
src/hyplas/: hyplas.py
